--- a/rts/at/simple/pom.xml
+++ b/rts/at/simple/pom.xml
@@ -27,6 +27,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.build.timestamp.format>yyyyMMdd'T'HHmmss</maven.build.timestamp.format>
     <version.narayana>5.10.5.Final-SNAPSHOT</version.narayana>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
   </properties>
 
     <repositories>
