--- a/pom.xml
+++ b/pom.xml
@@ -148,4 +148,23 @@
     <module>karaf/osgi-jta</module>
     <module>jta-and-hibernate-standalone</module>
   </modules>
+
+  <properties>
+    <modular.jdk.args></modular.jdk.args>
+  </properties>
+
+  <profiles>
+    <profile>
+      <id>jdk9</id>
+      <activation>
+        <jdk>[9,)</jdk>
+      </activation>
+      <properties>
+        <modular.jdk.args>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+          --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED
+          --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
+          --add-modules=java.se</modular.jdk.args>
+      </properties>
+    </profile>
+  </profiles>
 </project>
