--- a/spring/jta/pom.xml
+++ b/spring/jta/pom.xml
@@ -90,6 +90,11 @@
             <version>${version.org.springframwork}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
         <!-- Narayana dependencies -->
         <dependency>
             <groupId>org.jboss.narayana.jta</groupId>
