--- a/karaf/osgi-jta/pom.xml
+++ b/karaf/osgi-jta/pom.xml
@@ -110,7 +110,7 @@
             <plugin>
                 <groupId>org.apache.karaf.tooling</groupId>
                 <artifactId>karaf-services-maven-plugin</artifactId>
-                <version>4.2.1</version>
+                <version>${karaf.version}</version>
                 <executions>
                     <execution>
                         <id>service-metadata-generate</id>
