--- a/ArjunaCore/pom.xml
+++ b/ArjunaCore/pom.xml
@@ -28,6 +28,10 @@
   <packaging>pom</packaging>
   <name>JBoss Core Examples</name>
   <description>All quickstarts of JBoss Core</description>
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
   <repositories>
     <repository>
       <id>jboss-public-repository-group</id>
