--- a/ArjunaJTA/maven/pom.xml
+++ b/ArjunaJTA/maven/pom.xml
@@ -21,6 +21,8 @@
     <description>basic maven example</description>
     <properties>
       <version.narayana>5.10.5.Final-SNAPSHOT</version.narayana>
+      <maven.compiler.source>1.8</maven.compiler.source>
+      <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
     <repositories>
         <repository>
