--- a/ArjunaJTS/interop/glassfish/pom.xml
+++ b/ArjunaJTS/interop/glassfish/pom.xml
@@ -40,6 +40,7 @@
         <property>
           <name>!skipTests</name>
         </property>
+        <jdk>[1.5,8]</jdk>
       </activation>
       <build>
         <plugins>
