--- a/ArjunaJTS/interop/pom.xml
+++ b/ArjunaJTS/interop/pom.xml
@@ -27,6 +27,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.build.timestamp.format>yyyyMMdd'T'HHmmss</maven.build.timestamp.format>
+    <version.narayana>5.10.5.Final-SNAPSHOT</version.narayana>
   </properties>
 
   <licenses>
@@ -50,6 +51,28 @@
       </snapshots>
     </repository>
   </repositories>
+
+  <profiles>
+    <profile>
+      <id>include-for-JDK11-above-versions</id>
+      <activation>
+        <jdk>[11,)</jdk>
+      </activation>
+      <modules>
+        <module>glassfish</module>
+      </modules>
+    </profile>
+    <profile>
+      <id>skip-for-JDK9-all-versions</id>
+      <activation>
+        <jdk>(,9)</jdk>
+      </activation>
+      <modules>
+        <module>glassfish</module>
+      </modules>
+    </profile>
+  </profiles>
+
 
   <modules>
     <module>resource</module>
