--- a/ArjunaJTS/interop/test-ejbs/pom.xml
+++ b/ArjunaJTS/interop/test-ejbs/pom.xml
@@ -28,6 +28,7 @@
       <!-- [WARNING] Using platform encoding (UTF-8 actually) to copy filtered 
          resources, i.e. build is platform dependent! -->
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <version.glassfish.corba.omgapi>4.2.1</version.glassfish.corba.omgapi>
    </properties>
 
    <dependencyManagement>
@@ -93,6 +94,12 @@
          <artifactId>jboss-ejb-api_3.1_spec</artifactId>
          <scope>provided</scope>
       </dependency>
+
+       <dependency>
+           <groupId>org.glassfish.corba</groupId>
+           <artifactId>glassfish-corba-omgapi</artifactId>
+           <version>${version.glassfish.corba.omgapi}</version>
+       </dependency>
 
    </dependencies>
 
