--- a/ArjunaJTS/standalone/pom.xml
+++ b/ArjunaJTS/standalone/pom.xml
@@ -36,6 +36,8 @@
 
   <properties>
     <version.narayana>5.10.5.Final-SNAPSHOT</version.narayana>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <repositories>
