--- a/STM/jta/pom.xml
+++ b/STM/jta/pom.xml
@@ -18,9 +18,11 @@
 	<artifactId>stm-jta</artifactId>
 	<version>5.10.5.Final-SNAPSHOT</version>
 	<packaging>jar</packaging>
-        <properties>
-                <version.narayana>5.10.5.Final-SNAPSHOT</version.narayana>
-        </properties>
+	<properties>
+		<version.narayana>5.10.5.Final-SNAPSHOT</version.narayana>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
 	<repositories>
 		<repository>
 			<id>jboss-public-repository-group</id>
