--- a/atsintegration/pom.xml
+++ b/atsintegration/pom.xml
@@ -34,6 +34,8 @@
     <version.junit>4.8.2</version.junit>
     <version.narayana>5.10.5.Final-SNAPSHOT</version.narayana>
     <version.transaction.api>1.0.1.Final</version.transaction.api>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
