--- a/compensating-transactions/travel-agent/pom.xml
+++ b/compensating-transactions/travel-agent/pom.xml
@@ -23,10 +23,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    <parent>
+        <groupId>org.jboss.narayana.quickstart.compensatingtransactions</groupId>
+        <artifactId>narayana-quickstarts-compensations</artifactId>
+        <version>5.10.5.Final-SNAPSHOT</version>
+    </parent>
     <groupId>org.jboss.narayana.quickstart.compensations.travel-agent</groupId>
     <artifactId>travel-agent-all</artifactId>
-    <version>5.10.5.Final-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>JBoss Narayana Quickstarts: Two WS-BA Web services backed by Databases accessed in a JTA Transaction</name>
     <description>JBoss Narayana Quickstarts: Two WS-BA Web services backed by Databases accessed in a JTA Transaction
@@ -59,6 +62,8 @@
         <jvm.args.debug></jvm.args.debug>
         <jvm.args.other>-server</jvm.args.other>
         <version.surefire.plugin>2.19.1</version.surefire.plugin>
+        <version.javax.xml.ws>2.3.1</version.javax.xml.ws>
+        <version.javax.jw.jsr181>1.0-MR1</version.javax.jw.jsr181>
     </properties>
 
     <dependencyManagement>
@@ -84,6 +89,16 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>javax.jws</groupId>
+            <artifactId>jsr181-api</artifactId>
+            <version>${version.javax.jw.jsr181}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.ws</groupId>
+            <artifactId>jaxws-api</artifactId>
+            <version>${version.javax.xml.ws}</version>
+        </dependency>
         <!-- The XTS api needed to use WS-AT -->
         <dependency>
             <groupId>org.jboss.narayana.xts</groupId>
@@ -234,6 +249,7 @@
                                     Used in arquillian.xml
                                 -->
                                 <server.jvm.args>${jvm.args.other} ${jvm.args.memory} ${jvm.args.debug}</server.jvm.args>
+                                <modular.jdk.args>${modular.jdk.args}</modular.jdk.args>
                                 <node.address>127.0.0.1</node.address>
                             </systemPropertyVariables>
                             <redirectTestOutputToFile>true</redirectTestOutputToFile>
@@ -268,6 +284,7 @@
                                     Used in arquillian.xml
                                 -->
                                 <server.jvm.args>${jvm.args.other} ${jvm.args.memory} ${ipv6.server.jvm.args} ${jvm.args.debug}</server.jvm.args>
+                                <modular.jdk.args>${modular.jdk.args}</modular.jdk.args>
                                 <node.address>[::1]</node.address>
                             </systemPropertyVariables>
                             <redirectTestOutputToFile>true</redirectTestOutputToFile>
