--- a/rts/at/recovery/pom.xml
+++ b/rts/at/recovery/pom.xml
@@ -23,6 +23,10 @@
   <name>RESTAT Recovery Quickstarts</name>
   <description>Provides examples of how recoverable REST based transactional services</description>
   <packaging>pom</packaging>
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
   <modules>
     <module>recovery1</module>
     <module>recovery2</module>
