--- a/spring/jta/pom.xml
+++ b/spring/jta/pom.xml
@@ -51,6 +51,7 @@
         <version.org.jboss.jboss-transaction-spi>7.5.2.Final</version.org.jboss.jboss-transaction-spi>
         <version.h2>1.4.195</version.h2>
         <version.junit>4.12</version.junit>
+        <version.javax.annotation.api>1.3.2</version.javax.annotation.api>
     </properties>
 
     <repositories>
@@ -89,6 +90,11 @@
             <artifactId>spring-test</artifactId>
             <version>${version.org.springframwork}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>${version.javax.annotation.api}</version>
         </dependency>
         <!-- Narayana dependencies -->
         <dependency>
