--- a/wildfly/commit-markable-resource/pom.xml
+++ b/wildfly/commit-markable-resource/pom.xml
@@ -23,10 +23,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    <parent>
+        <artifactId>narayana-quickstarts-all</artifactId>
+        <groupId>org.jboss.narayana.quickstart</groupId>
+        <version>5.10.5.Final-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
+    </parent>
     <groupId>org.jboss.narayana.quickstarts</groupId>
     <artifactId>commit-markable-resource</artifactId>
-    <version>5.10.5.Final-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <name>Narayana Quickstarts: Commit Markable Resource in Wildfly</name>
@@ -58,6 +62,8 @@
         <version.creaper>1.6.1</version.creaper>
         <version.wildfly.core>4.0.0.Final</version.wildfly.core>
         <version.shrinkwrap>1.2.6</version.shrinkwrap>
+        <version.javax.xml.ws>2.3.1</version.javax.xml.ws>
+        <version.javax.annotation.api>1.3.2</version.javax.annotation.api>
     </properties>
 
     <build>
@@ -218,6 +224,16 @@
             <groupId>org.wildfly.core</groupId>
             <artifactId>wildfly-cli</artifactId>
             <version>${version.wildfly.core}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>${version.javax.annotation.api}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.ws</groupId>
+            <artifactId>jaxws-api</artifactId>
+            <version>${version.javax.xml.ws}</version>
         </dependency>
     </dependencies>
 
