--- a/rts/lra/pom.xml
+++ b/rts/lra/pom.xml
@@ -28,6 +28,7 @@
     <properties>
         <version.microprofile.lra>1.0-RC1</version.microprofile.lra>
         <version.thorntail>2.4.0.Final</version.thorntail>
+        <version.jackson>2.11.0</version.jackson>
     </properties>
 
     <repositories>
