--- a/jca-and-tomcat/pom.xml
+++ b/jca-and-tomcat/pom.xml
@@ -40,7 +40,7 @@
         <maven.compiler.source>1.7</maven.compiler.source>
         <version.maven-compiler-plugin>3.1</version.maven-compiler-plugin>
         <version.org.jboss.ironjacamar>1.4.22.Final</version.org.jboss.ironjacamar>
-        <version.com.github.fungal>0.11.0.RC1</version.com.github.fungal>
+        <version.com.github.fungal>0.11.0.Final</version.com.github.fungal>
         <version.hibernate.validator>6.1.5.Final</version.hibernate.validator>
         <version.javax.el>3.0.1-b11</version.javax.el>
         <version.narayana>5.10.6.Final-SNAPSHOT</version.narayana>
@@ -122,11 +122,6 @@
         <dependency>
             <groupId>com.github.fungal</groupId>
             <artifactId>fungal-cli</artifactId>
-            <version>${version.com.github.fungal}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.fungal</groupId>
-            <artifactId>fungal</artifactId>
             <version>${version.com.github.fungal}</version>
         </dependency>
         <dependency>
