--- a/ArjunaJTS/jts/application-component-1/pom.xml
+++ b/ArjunaJTS/jts/application-component-1/pom.xml
@@ -92,7 +92,7 @@
         <dependency>
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
-          <version>4.8.1</version>
+          <version>${version.junit}</version>
         </dependency>
     </dependencies>
 
