--- a/ArjunaJTS/jts/pom.xml
+++ b/ArjunaJTS/jts/pom.xml
@@ -28,6 +28,10 @@
     </license>
   </licenses>
 
+  <properties>
+    <version.junit>4.13.1</version.junit>
+  </properties>
+
   <modules>
     <!-- Build module 2 first as it is the remote EJB which provides a stub 
       for module 1 -->
