--- a/ArjunaJTS/pom.xml
+++ b/ArjunaJTS/pom.xml
@@ -44,6 +44,8 @@
   <properties>
     <version.surefire.plugin>2.19.1</version.surefire.plugin>
     <version.narayana>5.10.7.Final-SNAPSHOT</version.narayana>
+    <version.junit>4.13.1</version.junit>
+    <version.transaction.api_1_1>1.0.0.Final</version.transaction.api_1_1>
   </properties>
   <build>
     <pluginManagement>
@@ -112,12 +114,12 @@
     <dependency>
       <groupId>org.jboss.spec.javax.transaction</groupId>
       <artifactId>jboss-transaction-api_1.1_spec</artifactId>
-      <version>1.0.0.Final</version>
+      <version>${version.transaction.api_1_1}</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.6</version>
+      <version>${version.junit}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
