JBTM-3309 : JWT-LRA quickstart on wildfly server

--- a/rts/lra-examples/pom.xml
+++ b/rts/lra-examples/pom.xml
@@ -44,5 +44,6 @@
   <modules>
     <module>lra-coordinator</module>
     <module>cdi-participant</module>
+    <module>lra-jwt</module>
   </modules>
 </project>
