JBTM-3430 include an example of running the coordinator with quarkus

--- a/rts/lra-examples/lra-coordinator/pom.xml
+++ b/rts/lra-examples/lra-coordinator/pom.xml
@@ -56,6 +56,15 @@
                                     <outputDirectory>${project.build.directory}/</outputDirectory>
                                     <destFileName>lra-coordinator-thorntail.jar</destFileName>
                                 </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.jboss.narayana.rts</groupId>
+                                    <artifactId>lra-coordinator-quarkus</artifactId>
+                                    <version>${project.version}</version>
+                                    <classifier>runner</classifier>
+                                    <type>jar</type>
+                                    <outputDirectory>${project.build.directory}/</outputDirectory>
+                                    <destFileName>lra-coordinator-quarkus.jar</destFileName>
+                                </artifactItem>
                             </artifactItems>
                         </configuration>
                     </execution>
