--- a/at/pom.xml
+++ b/at/pom.xml
@@ -20,7 +20,7 @@ Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
   <parent>
     <groupId>org.jboss.narayana.rts</groupId>
     <artifactId>rest-tx</artifactId>
-    <version>5.12.0.Final</version>
+    <version>5.12.1.Final-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>restat</artifactId>
